--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.0.3",
+    "firebase": "^7.21.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -12,6 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "deploy": "react-scripts build && firebase use cartas-jogo && firebase deploy --only hosting",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
