--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.0",
     "cra-template": "1.0.3",
     "firebase": "^7.21.0",
     "react": "^16.13.1",
@@ -12,11 +13,11 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "deploy": "react-scripts build && firebase use cartas-jogo-beta && firebase deploy --only hosting",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-env start --env-file=configs/beta.env",
+    "deploy": "react-app-env build && --env-file=configs/beta.env && firebase use cartas-jogo-beta && firebase deploy --only hosting",
+    "build": "react-app-env build",
+    "test": "react-app-env test",
+    "eject": "react-app-env eject"
   },
   "eslintConfig": {
     "extends": "react-app"
