--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cra-template": "1.0.3",
     "firebase": "^7.21.0",
     "framer-motion": "^3.0.0",
+    "pure-react-carousel": "^1.27.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
